<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/select_language"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnTurkish"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/turkish"
            android:backgroundTint="@color/consept_color" />

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/consept_color" />

        <Button
            android:id="@+id/btnGerman"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/deutsch"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/consept_color" />

        <Button
            android:id="@+id/btnArabic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/consept_color" />

    </LinearLayout>

</LinearLayout>
