<resources>
    <string name="app_name">HealifyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="healify">Healify</string>
    <string name="healify2">Healify</string>
    <string name="select_language">Select Language</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="arabic">العربية</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_select_a_language_to_continue">Please select a language to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New user sign up</string>
    <string name="register">Register</string>
    <string name="name_surname">Name Surname</string>
    <string name="welcome_to_healify">Welcome to Healify</string>
    <string name="again_password">Again Password</string>

...
