...
        android:layout_height="wrap_content"
        android:hint="@string/again_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/consept_color"/>

...
